Fix bug #56868. sr=brendan,r=mccabe. Error object [[Class]] property.